<resources>
    <string name="app_name">Mad Level 4 Task 2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="computer_wins">Computer Wins!</string>
    <string name="user_wins">You Win!</string>
    <string name="draw">Draw</string>
    <string name="welcome">Welcome</string>
    <string name="computer">Computer</string>
    <string name="v_s">V.S.</string>
    <string name="you">You</string>
    <string name="instructions">Instructions: select rock, paper or scissors to play.</string>
    <string name="all_time_stats">Your all time statistics \nWin: %1d \tDraw: %2d Lose: %3d</string>
    <string name="your_history">Your Game History</string>
    <string name="rock">rock</string>
    <string name="paper">paper</string>
    <string name="scissors">scissors</string>

    <string name="menu_item_nav_history">History</string>
    <string name="menu_item_clear_history">Clear History</string>
    <string name="menu_item_back">Back</string>

</resources>